<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GUI.fragments.ModifyFragment">

    <!-- Activity title -->
    <TextView
        android:id="@+id/modify_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="52dp"
        android:text="@string/modify_message"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_image_picasso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <!-- Picasso view -->


    <!-- Validate button -->

    <com.prose.nirvanapp.Picasso.Picasso
        android:id="@+id/edit_image_picasso"
        android:layout_width="371dp"
        android:layout_height="402dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modify_title_textView" />

    <Button
        android:id="@+id/modify_valid_button"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="44dp"
        android:text="@string/validate_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <!-- Cancel button -->
    <Button
        android:id="@+id/modify_cancel_button"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="44dp"
        android:text="@string/cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <!-- Obstacle button -->
    <Button
        android:id="@+id/modify_obstacle_button"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="112dp"
        android:text="@string/obstacle_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/modify_door_button"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent" />
    <!-- Door button -->
    <Button
        android:id="@+id/modify_door_button"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/door_button"
        app:layout_constraintBottom_toTopOf="@+id/modify_valid_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent" />
    <!-- Erase button -->
    <Button
        android:id="@+id/modify_eraser_button"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="112dp"
        android:text="@string/erase_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toEndOf="@+id/modify_door_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
