<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GUI.fragments.ScanFragment">

    <!-- Message -->

    <!-- Make cartography button -->

    <TextView
        android:id="@+id/scan_message_textView"
        android:layout_width="217dp"
        android:layout_height="49dp"
        android:layout_marginTop="140dp"
        android:text="@string/scan_place_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.298"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/scan_scan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startScan_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Spinner
        android:id="@+id/scan_mark_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/marks_message"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toEndOf="@+id/scan_message_textView"
        app:layout_constraintTop_toTopOf="@+id/scan_message_textView" />

    <Button
        android:id="@+id/scan_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scan_scan_button" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="295dp"
        android:layout_height="300dp"
        android:src="@drawable/marks_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scan_message_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>
